--- a/app/views/movies/_movie_bookmarks_new_form.html.erb
+++ b/app/views/movies/_movie_bookmarks_new_form.html.erb
@@ -3,12 +3,9 @@
 <!-- Form bookmark end -->
 
   <!-- Label and input for user_id start -->
-  <div class="form-group">
-    <%= f.label :user_id %>
-    <!-- Input for user_id start -->
-    <%= f.select :user_id, options_from_collection_for_select(User.all, :id, :to_s, @bookmark.user_id), {}, class: "form-control" %>
-    <!-- Input for user_id end -->
-  </div>
+  <!-- Input for "user_id" start -->
+  <%= f.hidden_field :user_id, value: current_user.id %>
+  <!-- Input for "user_id" end -->
   <!-- Label and input for user_id end -->
 
   <!-- Label and input for movie_id start -->
